SubVersion: $Id$

To do:
	- video scaling
	- link port is broken (HW2 only ?!)
	- stealth I/O and mem protect (done but not enabled)

- 07/02/2005, version 1.80m: roms
	- dbus architecture improved (reset)
	- fixed and tested linkport support with real cables: GrayLink, BlackLink, VTi and TiEmu.
	- tested: TiLP/VTi (vti), VTi/TiEmu (vti), TiLP/TiEmu (tie).
	- SilverLink makes TiEmu crash.
	- 0x200000 and 0x400000 are ghost of 0x000000 (Titanium only)
	- added 0x7100xx ports and fixed LCD address on HW2/HW3
	- real grayscale emulation for HW2/HW3
	- removed VTi signature (buggy SR)
	- searching of data begins at the current tab address
	- fixed heap listing with AMS300
	- fixed Step Over on TRAP

- 21/01/2005, version 1.80l: roms
	- switched to GTK+ package 2.4-rc26 (2.4.14): compatible with GiMP and fixes toolbar tooltips
	- fixed size of handles in handle wnd
	- some improvements and fixes in the linkport support
	- fixed AI2 (need to be raised whenever a key is pressed)
	- main loop modified: main loop is restarted whenever a new ROM is loaded.
	- fixed main window which appears when the whole window is ready
	- fixed V200 and Titanium crash under Linux (buffer overflow). V200 transfers don't crash
		any more under Windows (probably same bug).
	- added kbd_dbg variable in tiemu.ini file to display keystrokes in console (useful for creating keymaps).
	- prevent Alt+ESC and Ctrl+ESC to disturb TiEmu (thanks to Kevin)

- 20/01/2005, version 1.80k: roms
	- link port is now reset when error occurs: great improvement
	- added support of EA bit ($60000D:2): Titanium work
	- clean-up of linkport support (no more hack)
	- fixed linkport progress bars
	- boosted linkport speed (direct file)

- 12/01/2005, version 1.80j: roms
	- rewrite of the m68k loop:
		* UAE fixed to handle multiple pending interrupts and some other fixes
		* idle mode and STOP improved but problems with ON key
	- fixed grayscale routines: they are now rock-stable !
	- fixed grayscales with HW2